--- a/_includes/blog_feed.html
+++ b/_includes/blog_feed.html
@@ -2,69 +2,29 @@
 <div class="row">
 <div class="col-md-8 blog-main">
 <h3 class="pb-3 mb-4 font-italic border-bottom">
-  From the Traders
+  Latest posts
 </h3>
+{% for post in site.posts %}
+  <div class=card flex-md-row" style="border: 0px;">
+    <div class="row no-gutters pb-3 pt-2">
+      {% if post.image %}
+        <div class="col-md-3 d-none d-lg-block">
+          <a href="{{ post.url }}"><img src="{{ post.image | replace: "c_fit", "c_fit,g_center,h_110,w_110" }}" class="card-img pt-4" alt=""></a>
+        </div>
+      {% endif %}
+      <div class="col-md-9">
+        <div class="card-body">
+          <a href="{{ post.url }}" class="text-dark"><h3 class="card-title">{{ post.title }}</h3></a>
+          <a href="{{ post.url }}" class="text-muted"><p class="card-text text-muted">{{ post.date | date_to_string: "ordinal", "US" }}</p></a>
+          <a href="{{ post.url }}" class="text-dark"><p class="card-text">{{ post.excerpt | strip_html | strip_newlines | truncate: 90 }}</p></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="border-bottom"></div><!-- /.blog-post -->
+{% endfor %}
 
-<div class="blog-post">
-  <h2 class="blog-post-title">Sample blog post</h2>
-  <p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
-
-  <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
-  <hr>
-  <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
-  <blockquote>
-    <p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-  </blockquote>
-  <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-  <h2>Heading</h2>
-  <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
-  <h3>Sub-heading</h3>
-  <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-  <pre><code>Example code block</code></pre>
-  <p>Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-  <h3>Sub-heading</h3>
-  <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-  <ul>
-    <li>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</li>
-    <li>Donec id elit non mi porta gravida at eget metus.</li>
-    <li>Nulla vitae elit libero, a pharetra augue.</li>
-  </ul>
-  <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</p>
-  <ol>
-    <li>Vestibulum id ligula porta felis euismod semper.</li>
-    <li>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</li>
-    <li>Maecenas sed diam eget risus varius blandit sit amet non magna.</li>
-  </ol>
-  <p>Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis.</p>
-</div><!-- /.blog-post -->
-
-<div class="blog-post">
-  <h2 class="blog-post-title">Another blog post</h2>
-  <p class="blog-post-meta">December 23, 2013 by <a href="#">Jacob</a></p>
-
-  <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
-  <blockquote>
-    <p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-  </blockquote>
-  <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-  <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
-</div><!-- /.blog-post -->
-
-<div class="blog-post">
-  <h2 class="blog-post-title">New feature</h2>
-  <p class="blog-post-meta">December 14, 2013 by <a href="#">Chris</a></p>
-
-  <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-  <ul>
-    <li>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</li>
-    <li>Donec id elit non mi porta gravida at eget metus.</li>
-    <li>Nulla vitae elit libero, a pharetra augue.</li>
-  </ul>
-  <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-  <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</p>
-</div><!-- /.blog-post -->
-
-<nav class="blog-pagination">
+<nav class="blog-pagination mt-5">
   <!-- Pagination links -->
   {% if paginator.previous_page %}
     <a class="btn btn-outline-primary" href="{{ paginator.previous_page_path }}">Older</a>
