--- a/_includes/category_snippet.html
+++ b/_includes/category_snippet.html
@@ -1,3 +1,3 @@
 <div class="d-flex-inline pb-1">
-  <strong class="text-ol-teal mt-1">{{ page.categories | sort_natural | join: "  |  " | downcase }}</strong>
+  <strong class="text-info mt-1">{{ page.categories | sort_natural | join: "  |  " | downcase }}</strong>
 </div>
