--- a/_includes/featured.html
+++ b/_includes/featured.html
@@ -5,7 +5,7 @@
     <div class="col-md-6">
       <div class="card flex-md-row mb-4 shadow-sm h-md-250">
         <div class="card-body d-flex flex-column align-items-start">
-          <strong class="d-inline-block mb-2 text-ol-teal">{{ post.categories | sort_natural | join: "  |  " | downcase }}</strong>
+          <strong class="d-inline-block mb-2 text-info">{{ post.categories | sort_natural | join: "  |  " | downcase }}</strong>
           <h3 class="mb-0">
             <a class="text-dark text-decoration-none" href="{{ post.url }}">{{ post.title }}</a>
           </h3>
@@ -28,7 +28,7 @@
     <div class="col-md-6">
       <div class="card flex-md-row mb-4 shadow-sm h-md-250">
         <div class="card-body d-flex flex-column align-items-start">
-          <strong class="d-inline-block mb-2 text-ol-teal">{{ post.categories | sort_natural | join: "  |  " | downcase }}</strong>
+          <strong class="d-inline-block mb-2 text-info">{{ post.categories | sort_natural | join: "  |  " | downcase }}</strong>
           <h3 class="mb-0">
             <a class="text-dark text-decoration-none" href="{{ post.url }}">{{ post.title }}</a>
           </h3>
