--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -31,8 +31,8 @@ const hitTemplate = function(hit) {
 
   return `
     <div class="post-item">
+      <h3><a class="post-link text-dark" href="${url}">${title}</a></h3>
       <span class="post-meta">${date}</span>
-      <h2><a class="post-link" href="${url}">${title}</a></h2>
       {{#breadcrumbs}}<a href="${url}" class="post-breadcrumbs">${breadcrumbs}</a>{{/breadcrumbs}}
       <div class="post-snippet">${content}</div>
     </div>
