--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,5 +7,6 @@
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="/assets/css/styles.css">
   <link rel="stylesheet" href="/assets/css/blog.css">
+  <link rel="shortcut icon" href="/assets/icons/favicon.ico">
   <title>{{ site.title }}</title>
 </head>
