--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
-  {% include head.html %}
+  {% include_cached head.html %}
   <body>
-    {% include navigation.html %}
+    {% include_cached navigation.html %}
     <div class="container">
       <main role="main" class="container">
       <div class="row">
@@ -40,13 +40,13 @@
           {% endfor %}
         {{ content }}
       </div>
-        {% include sidebar.html %}
+        {% include_cached sidebar.html %}
       </div>
       </main>
     </div>
-  {% include footer.html %}
-  {% include lightbox.html %}
+  {% include_cached footer.html %}
+  {% include_cached lightbox.html %}
   </body>
-  {% include modal.html %}
-  {% include algolia.html %}
+  {% include_cached modal.html %}
+  {% include_cached algolia.html %}
 </html>
