--- a/_includes/author_snippet.html
+++ b/_includes/author_snippet.html
@@ -14,10 +14,10 @@
     {{ author.company }}<br />
     <span class="text-black-50 font-weight-lighter font-italic">{{ author.description }}</span><p>
     {% if author.facebook %}
-      <a href="https://www.facebook.com/{{author.facebook}}/" target="_blank"><i class="fab fa-facebook fa-2x" style="color: #3b5998;"></i></a>
+      <a href="https://www.facebook.com/{{author.facebook}}/" target="_blank"><i class="fab fa-facebook fa-2x mt-1" style="color: #3b5998;"></i></a>
     {% endif %}
     {% if author.twitter %}
-      <a href="https://www.twitter.com/{{author.twitter}}/" target="_blank"><i class="fab fa-twitter fa-2x" style="color: #55acee;"></i></a>
+      <a href="https://www.twitter.com/{{author.twitter}}/" target="_blank"><i class="fab fa-twitter fa-2x mt-1" style="color: #55acee;"></i></a>
     {% endif %}
   </div>
 </div>
