--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
             {{ content | extlinks }}
           </div>
         </div>
-        {% include_cached author_snippet.html %}
+        {% include author_snippet.html %}
       </div>
         {% include_cached sidebar.html %}
       </div>
